Adding forward Navigation

--- a/place-booking/src/app/places/discover/discover.page.html
+++ b/place-booking/src/app/places/discover/discover.page.html
@@ -19,7 +19,10 @@
           </ion-card-content>
 
           <div class="ion-padding">
-            <ion-button fill="clear" color="primary" [routerLink]="['/', 'places', 'tabs', 'discover', loadedPlaces[0].id]">
+            <ion-button 
+                  fill="clear" 
+                  color="primary"
+                  [routerLink]="['/', 'places', 'tabs', 'discover', loadedPlaces[0].id]">
               More
             </ion-button>
           </div>
