--- a/place-booking/src/app/app.component.html
+++ b/place-booking/src/app/app.component.html
@@ -1,3 +1,32 @@
 <ion-app>
+  <ion-menu side="start" contentId="main">
+      <ion-header>
+          <ion-toolbar>
+            <ion-title>
+               Amazing Places
+            </ion-title>
+          </ion-toolbar>
+      </ion-header>
+
+
+      <ion-content>
+        <ion-list>
+          <ion-item>
+            <ion-icon name="business" slot="start"></ion-icon>
+            <ion-label>Discover Places</ion-label>
+          </ion-item>
+
+          <ion-item>
+            <ion-icon name="checkout-outline" slot="start"></ion-icon>
+            <ion-label>Your Bookings</ion-label>
+          </ion-item>
+
+          <ion-item>
+            <ion-icon name="exit" slot="start"></ion-icon>
+            <ion-label>Logout</ion-label>
+          </ion-item>
+        </ion-list>
+      </ion-content>
+  </ion-menu>
   <ion-router-outlet></ion-router-outlet>
 </ion-app>
