--- a/place-booking/src/app/app.component.html
+++ b/place-booking/src/app/app.component.html
@@ -3,7 +3,7 @@
       <ion-header>
           <ion-toolbar>
             <ion-title>
-               Amazing Places
+               PairBnB
             </ion-title>
           </ion-toolbar>
       </ion-header>
@@ -11,22 +11,29 @@
 
       <ion-content>
         <ion-list>
-          <ion-item>
+          <ion-menu-toggle>
+          <ion-item routerLink="/places/tabs/discover">
             <ion-icon name="business" slot="start"></ion-icon>
             <ion-label>Discover Places</ion-label>
           </ion-item>
+        </ion-menu-toggle>
 
-          <ion-item>
-            <ion-icon name="checkout-outline" slot="start"></ion-icon>
+        <ion-menu-toggle>
+          <ion-item routerLink="/bookings">
+            <ion-icon name="ribbon" slot="start"></ion-icon>
             <ion-label>Your Bookings</ion-label>
           </ion-item>
+        </ion-menu-toggle>
 
-          <ion-item>
+        <ion-menu-toggle>
+          <ion-item (click)="onLogout()">
             <ion-icon name="exit" slot="start"></ion-icon>
             <ion-label>Logout</ion-label>
           </ion-item>
+        </ion-menu-toggle>
+        
         </ion-list>
       </ion-content>
   </ion-menu>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
