--- a/place-booking/src/app/places/offers/offers.page.html
+++ b/place-booking/src/app/places/offers/offers.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-menu-button content="main"></ion-menu-button>
+      <ion-menu-button id="main"></ion-menu-button>
     </ion-buttons>
     <ion-title>My Offers</ion-title>
     <ion-buttons slot="primary">
