--- a/place-booking/src/app/bookings/create-booking/create-booking.component.html
+++ b/place-booking/src/app/bookings/create-booking/create-booking.component.html
@@ -1,12 +1,16 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Book this Place!
+      {{ selectedPlace.title }}
     </ion-title>
+    <ion-button (click)="onCancel()">
+      <ion-icon name="close"></ion-icon>
+    </ion-button>
   </ion-toolbar>
 </ion-header>
 
 
-<ion-content>
-  <h1>Book this Place!</h1>
+<ion-content  class="ion-text-center" class="ion-padding">
+  <p>{{ selectedPlace.description}}</p>
+  <ion-button color="primary" (click)="onBookPlace()">Book</ion-button>
 </ion-content>
