--- a/place-booking/src/app/places/discover/place-detail/place-detail.page.html
+++ b/place-booking/src/app/places/discover/place-detail/place-detail.page.html
@@ -7,6 +7,6 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
-    <ion-button color="primary" margin (click)="onBookPlace()">Book Place</ion-button>
+<ion-content class="ion-padding">
+    <ion-button color="primary" class="ion-margin" (click)="onBookPlace()">Book Place</ion-button>
 </ion-content>
