working with ionic components

--- a/place-booking/src/app/places/offers/new-offer/new-offer.page.html
+++ b/place-booking/src/app/places/offers/new-offer/new-offer.page.html
@@ -9,5 +9,17 @@
 </ion-header>
 
 <ion-content>
-
+  <ion-grid>
+    <ion-row>
+      <ion-col size="4" offset="2">Row 1 Col 1</ion-col>
+      <ion-col size="4" offset="2">
+        <ion-card>
+          <ion-card-content>
+            <h1>The Column</h1>
+            <p>Row 1 cold 1</p>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
