--- a/place-booking/src/app/places/offers/edit-offer/edit-offer.page.html
+++ b/place-booking/src/app/places/offers/edit-offer/edit-offer.page.html
@@ -1,6 +1,10 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>Edit-offer</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/places/tabs/offers">
+      </ion-back-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
