--- a/place-booking/src/app/places/offers/offers.page.html
+++ b/place-booking/src/app/places/offers/offers.page.html
@@ -17,7 +17,7 @@
     <ion-row>
       <ion-col size="12" size-sm='8' offset-sm="2" class="ion-text-center">
         <ion-list>
-          <ion-item-sliding *ngFor="let offer of offers" >
+          <ion-item-sliding *ngFor="let offer of offers" #slidingItem>
             <ion-item 
             [routerLink]="['/', 'places', 'tabs', 'offers', offer.id]"
             detail
@@ -32,8 +32,7 @@
         </ion-item>
         <ion-item-options>
           <ion-item-option color="secondary"
-          [routerLink]="['/', 'places', 'tabs', 'offers', 'edit', offer.id]"
-          (click)="onEdit(offer?.id)">
+            (click)="onEdit(offer?.id, slidingItem)">
             <ion-icon name="create" slot="icon-only"></ion-icon>
           </ion-item-option>
         </ion-item-options>
