--- a/place-booking/src/app/auth/auth.page.html
+++ b/place-booking/src/app/auth/auth.page.html
@@ -5,7 +5,10 @@
 </ion-header>
 
 <ion-content>
-  <ion-button color="primary" (click)="onLogin()">
+  <!-- <div class="text-center">
+    <ion-spinner color="primary" *ngIf="isLoading"></ion-spinner>
+  </div> -->
+  <ion-button color="primary" (click)="onLogin()" >
     Login
   </ion-button>
 </ion-content>
