addded theme and cutom style to the project

--- a/place-booking/src/theme/variables.scss
+++ b/place-booking/src/theme/variables.scss
@@ -69,3 +69,7 @@
   --ion-toolbar-background: var(--ion-color-primary);
   --ion-toolbar-color: var(--ion-color-primary-contrast);
 }
+
+// ion-button  {
+//   --box-shadow:2px 2px 10px rgba(0, 0, 0, 0.6);
+// }
