--- a/place-booking/src/app/places/offers/offers.page.html
+++ b/place-booking/src/app/places/offers/offers.page.html
@@ -5,9 +5,9 @@
     </ion-buttons>
     <ion-title>My Offers</ion-title>
     <ion-buttons slot="primary">
-     <ion-button routerLink="/places/tabs/offers/new">
-      <ion-icon name="add" slot="icon-only"></ion-icon>
-     </ion-button>
+      <ion-button routerLink="/places/tabs/offers/new">
+        <ion-icon name="add" slot="icon-only"></ion-icon>
+      </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
@@ -15,16 +15,18 @@
 <ion-content class="ion-padding">
   <ion-grid>
     <ion-row>
-      <ion-col size="12" size-sm='8' offset-sm="2" class="ion-text-center">
+      <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
         <ion-list>
           <ion-item-sliding *ngFor="let offer of offers" #slidingItem>
-            
-        <ion-item-options>
-          <ion-item-option color="secondary"
-            (click)="onEdit(offer?.id, slidingItem)">
-            <ion-icon name="create" slot="icon-only"></ion-icon>
-          </ion-item-option>
-        </ion-item-options>
+            <app-offer-item [offer]="offer"></app-offer-item>
+            <ion-item-options>
+              <ion-item-option
+                color="secondary"
+                (click)="onEdit(offer?.id, slidingItem)"
+              >
+                <ion-icon name="create" slot="icon-only"></ion-icon>
+              </ion-item-option>
+            </ion-item-options>
           </ion-item-sliding>
         </ion-list>
       </ion-col>
