--- a/place-booking/src/app/auth/auth.page.html
+++ b/place-booking/src/app/auth/auth.page.html
@@ -4,11 +4,35 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <!-- <div class="text-center">
-    <ion-spinner color="primary" *ngIf="isLoading"></ion-spinner>
-  </div> -->
-  <ion-button color="primary" (click)="onLogin()" >
-    Login
-  </ion-button>
+<ion-content class="ion-padding">
+  <form>
+  <ion-grid>
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3">
+        <ion-list>
+          <ion-item>
+            <ion-label position="floating">Email</ion-label>
+            <ion-input type="email"></ion-input>
+          </ion-item>
+
+          <ion-item>
+            <ion-label position="floating">Password</ion-label>
+            <ion-input type="password"></ion-input>
+          </ion-item>
+        </ion-list>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3">
+        <ion-button color="primary" fill="clear" expand="full">
+          Switch to Login
+        </ion-button>
+        <ion-button color="primary" (click)="onLogin()" expand="block">
+          Login
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+</form>
 </ion-content>
