--- a/place-booking/src/app/places/offers/new-offer/new-offer.page.html
+++ b/place-booking/src/app/places/offers/new-offer/new-offer.page.html
@@ -5,21 +5,60 @@
       </ion-back-button>
     </ion-buttons>
     <ion-title>New Offer</ion-title>
+    <ion-buttons slot="primary">
+      <ion-button (click)="onCreateOffer()"></ion-button>
+      <ion-icon name="checkmark-circle" slot="icon-only"></ion-icon>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <form [formGroup]="form">
   <ion-grid>
     <ion-row>
-      <ion-col size="4" offset="2">Row 1 Col 1</ion-col>
-      <ion-col size="4" offset="2">
-        <ion-card>
-          <ion-card-content>
-            <h1>The Column</h1>
-            <p>Row 1 cold 1</p>
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-item>
+            <ion-label position="floating">Title</ion-label>
+            <ion-input type="text" autocomplete autocorrect
+            formControlName="title"></ion-input>
+          </ion-item>
+        </ion-col>
     </ion-row>
+
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3">
+        <ion-item>
+          <ion-label position="floating">Short Description</ion-label>
+          <ion-textarea rows="3" formControlName="description"></ion-textarea>
+        </ion-item>
+      </ion-col>
+  </ion-row>
+
+  <ion-row>
+    <ion-col size-sm="6" offset-sm="3">
+      <ion-item>
+        <ion-label position="floating">Price</ion-label>
+        <ion-input type="number" formControlName="price"></ion-input>
+      </ion-item>
+    </ion-col>
+</ion-row>
+
+<ion-row>
+  <ion-col size-sm="3" offset-sm="3">
+    <ion-item>
+      <ion-label position="floating">Available from</ion-label>
+     <ion-datetime min="2019-01-01" max="2022-12-31" formControlName="dateFrom"></ion-datetime>
+    </ion-item>
+  </ion-col>
+
+  <ion-col size-sm="3">
+    <ion-item>
+      <ion-label position="floating">Available to</ion-label>
+     <ion-datetime min="2019-01-02" max="2022-12-31" formControlName="dateTo"></ion-datetime>
+    </ion-item>
+  </ion-col>
+</ion-row>
+
   </ion-grid>
+</form>
 </ion-content>
