--- a/place-booking/src/app/bookings/create-booking/create-booking.component.html
+++ b/place-booking/src/app/bookings/create-booking/create-booking.component.html
@@ -10,7 +10,23 @@
 </ion-header>
 
 
-<ion-content  class="ion-text-center" class="ion-padding">
-  <p>{{ selectedPlace.description}}</p>
+<ion-content class="ion-text-center" class="ion-padding">
+  <form>
+  <ion-grid>
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3">
+        <ion-item>
+          <ion-label position="floating">
+              First name
+          </ion-label>
+          <ion-input
+            required
+            name="first-name"
+          ></ion-input>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
   <ion-button color="primary" (click)="onBookPlace()">Book</ion-button>
+</form>
 </ion-content>
