--- a/place-booking/src/app/places/offers/edit-offer/edit-offer.page.html
+++ b/place-booking/src/app/places/offers/edit-offer/edit-offer.page.html
@@ -2,12 +2,46 @@
   <ion-toolbar>
     <ion-title>Edit-offer</ion-title>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/places/tabs/offers">
+      <ion-back-button defaultHref=" '/places/tabs/offers' + place.id ">
       </ion-back-button>
     </ion-buttons>
+
+    <ion-buttons slot="primary">
+      <ion-button (click)="onUpdateOffer()" [disabled]="!editNewOfferform.valid"></ion-button>
+      <ion-icon name="checkmark-circle" slot="icon-only"></ion-icon>
+    </ion-buttons>
+
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding">
+  <form [formGroup]="editNewOfferform">
+    <ion-grid>
+      <ion-row>
+          <ion-col size-sm="6" offset-sm="3">
+            <ion-item>
+              <ion-label position="floating">Title</ion-label>
+              <ion-input type="text" autocomplete autocorrect
+              formControlName="title"></ion-input>
+            </ion-item>
+          </ion-col>
+      </ion-row>
+  
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-item>
+            <ion-label position="floating">Short Description</ion-label>
+            <ion-textarea rows="3" formControlName="description"></ion-textarea>
+          </ion-item>
+        </ion-col>
+    </ion-row>
+    <!-- Error Validation row -->
+    <ion-row *ngIf="!editNewOfferform.get('description').valid && editNewOfferform.get('description').touched">
+      <ion-col size-sm="6" offset-sm="3">
+        <span class="errorMsg">Description must be between 100 and 180 characters</span>
+      </ion-col>
+    </ion-row>
 
+    </ion-grid>
+  </form>
 </ion-content>
