--- a/place-booking/src/app/places/offers/new-offer/new-offer.page.html
+++ b/place-booking/src/app/places/offers/new-offer/new-offer.page.html
@@ -6,7 +6,7 @@
     </ion-buttons>
     <ion-title>New Offer</ion-title>
     <ion-buttons slot="primary">
-      <ion-button (click)="onCreateOffer()"></ion-button>
+      <ion-button (click)="onCreateOffer()" [disabled]="!form.valid"></ion-button>
       <ion-icon name="checkmark-circle" slot="icon-only"></ion-icon>
     </ion-buttons>
   </ion-toolbar>
@@ -32,6 +32,12 @@
           <ion-textarea rows="3" formControlName="description"></ion-textarea>
         </ion-item>
       </ion-col>
+  </ion-row>
+  <!-- Error Validation row -->
+  <ion-row *ngIf="!form.get('description').valid && form.get('description').touched">
+    <ion-col size-sm="6" offset-sm="3">
+      <span class="errorMsg">Description must be 180 characters</span>
+    </ion-col>
   </ion-row>
 
   <ion-row>
