--- a/place-booking/src/app/places/offers/edit-offer/edit-offer.page.html
+++ b/place-booking/src/app/places/offers/edit-offer/edit-offer.page.html
@@ -17,6 +17,7 @@
 <ion-content class="ion-padding">
   <form [formGroup]="editNewOfferform">
     <ion-grid>
+
       <ion-row>
           <ion-col size-sm="6" offset-sm="3">
             <ion-item>
@@ -26,6 +27,12 @@
             </ion-item>
           </ion-col>
       </ion-row>
+      <!-- Error Validation row for title -->
+  <ion-row *ngIf="!editNewOfferform.get('title').valid && editNewOfferform.get('title').touched">
+    <ion-col size-sm="6" offset-sm="3">
+      <span class="errorMsg">Ttitle must be at 3 characters</span>
+    </ion-col>
+  </ion-row>
   
       <ion-row>
         <ion-col size-sm="6" offset-sm="3">
