--- a/place-booking/src/app/bookings/create-booking/create-booking.component.html
+++ b/place-booking/src/app/bookings/create-booking/create-booking.component.html
@@ -91,7 +91,7 @@
     </ion-row>
 
 
-    <!-- Date Picker -->
+    <!-- Date Picker for TO -->
     <ion-row>
       <ion-col size-sm="3">
         <ion-item>
