--- a/place-booking/src/app/bookings/create-booking/create-booking.component.html
+++ b/place-booking/src/app/bookings/create-booking/create-booking.component.html
@@ -114,7 +114,7 @@
 
     <ion-row>
       <ion-col size-sm="3" offset-sm="3">
-        <ion-button type="button" color="primary" expand="block" [disabled]="!f.valid || !datesValid(f)">Book</ion-button> 
+        <ion-button type="button" color="primary" expand="block" [disabled]="!f.valid || !datesValid()">Book</ion-button> 
       </ion-col>
     </ion-row>
 
