--- a/place-booking/src/app/places/discover/discover.page.html
+++ b/place-booking/src/app/places/discover/discover.page.html
@@ -26,11 +26,11 @@
           </ion-card-content>
 
           <div class="ion-padding">
-            <ion-button 
-                  fill="clear" 
+            <ion-button  
                   color="primary"
+                  expand="block"
                   [routerLink]="['/', 'places', 'tabs', 'discover', loadedPlaces[0].id]">
-              More
+              View More
             </ion-button>
           </div>
         </ion-card>
@@ -39,21 +39,19 @@
 
     <ion-row>
       <ion-col size="12" size-sm='8' offset-sm="2" class="ion-text-center">
-        <ion-virtual-scroll [items]="listedLoadedPlaces" approxItemHeight="50px">
-          <ion-item 
+        <ion-list>
+          <ion-item *ngFor="let place of loadedPlaces.slice(1)"
               [routerLink]="['/', 'places', 'tabs', 'discover', place.id]"
-              detail
-              *virtualItem="let place"
-              >
-            <ion-thumbnail slot="start"> 
-              <ion-img [src]="place?.imageUrl"></ion-img>
+              detail>
+            <ion-thumbnail slot="start">
+                <ion-img [src]="place.imageUrl"></ion-img>
             </ion-thumbnail>
             <ion-label>
-              <h2>{{place?.title}}</h2>
-              <p>{{place?.description}}</p>
+              <h2>{{ place.title }}</h2>
+              <p>{{ place.description }}</p>
             </ion-label>
           </ion-item>
-        </ion-virtual-scroll>
+        </ion-list>
       </ion-col>
     </ion-row>
   </ion-grid>
