--- a/place-booking/src/app/places/offers/new-offer/new-offer.page.html
+++ b/place-booking/src/app/places/offers/new-offer/new-offer.page.html
@@ -6,7 +6,7 @@
     </ion-buttons>
     <ion-title>New Offer</ion-title>
     <ion-buttons slot="primary">
-      <ion-button (click)="onCreateOffer()" [disabled]="!form.valid"></ion-button>
+      <ion-button></ion-button>
       <ion-icon name="checkmark-circle" slot="icon-only"></ion-icon>
     </ion-buttons>
   </ion-toolbar>
@@ -62,6 +62,15 @@
       <ion-label position="floating">Available to</ion-label>
      <ion-datetime min="2019-01-02" max="2022-12-31" formControlName="dateTo"></ion-datetime>
     </ion-item>
+  </ion-col>
+</ion-row>
+
+
+<ion-row>
+  <ion-col size-sm="6" offset-sm="3">
+    <ion-button color="primary" (click)="onCreateOffer()" [disabled]="!form.valid" expand="block">
+      Create New Offer
+    </ion-button>
   </ion-col>
 </ion-row>
 
