--- a/place-booking/src/app/places/discover/place-detail/place-detail.page.html
+++ b/place-booking/src/app/places/discover/place-detail/place-detail.page.html
@@ -7,6 +7,20 @@
   </ion-toolbar>
 </ion-header>
 
+<ion-grid>
+  <ion-row>
+    <ion-col size="12" size-sm='8'class="imgContainer">
+      <ion-img [src]="place.imageUrl"></ion-img>
+    </ion-col>
+
+     <ion-col>
+        <ion-content fullscreen>
+          <h3>{{ place.title}}</h3>
+        </ion-content>
+      </ion-col>
+  </ion-row>
+</ion-grid>
+
 <ion-content class="ion-padding">
     <ion-button color="primary" class="ion-margin" (click)="onBookPlace()">Book Place</ion-button>
 </ion-content>
