implemented addPlace method and fixed other components like the Offers page to name a few

--- a/place-booking/src/app/places/discover/place-detail/place-detail.page.scss
+++ b/place-booking/src/app/places/discover/place-detail/place-detail.page.scss
@@ -1,13 +1,3 @@
-$card-ios-margin-left: 0;
-$card-ios-margin-right: 0;
-
-
-
-// For Android
-$card-md-margin-left: 0;
-$card-md-margin-right: 0;
-
-
-// .imgContainer {
-//     margin: 0;
-// }
+ion-content {
+    --background: #f2f2f2;
+}
