--- a/place-booking/src/app/places/offers/offers.page.html
+++ b/place-booking/src/app/places/offers/offers.page.html
@@ -21,7 +21,7 @@
             <app-offer-item [offer]="offer"></app-offer-item>
             <ion-item-options>
               <ion-item-option
-                color="secondary"
+                color="primary"
                 (click)="onEdit(offer?.id, slidingItem)"
               >
                 <ion-icon name="create" slot="icon-only"></ion-icon>
