--- a/place-booking/src/app/places/discover/place-detail/place-detail.page.html
+++ b/place-booking/src/app/places/discover/place-detail/place-detail.page.html
@@ -9,7 +9,7 @@
 
 <ion-grid>
   <ion-row>
-    <ion-col size="12" size-sm='8'class="imgContainer">
+    <ion-col size="12" size-sm='8'>
       <ion-img [src]="place.imageUrl"></ion-img>
     </ion-col>
 
