--- a/place-booking/src/app/places/offers/new-offer/new-offer.page.html
+++ b/place-booking/src/app/places/offers/new-offer/new-offer.page.html
@@ -15,6 +15,8 @@
 <ion-content>
   <form [formGroup]="form">
   <ion-grid>
+
+    <!-- title -->
     <ion-row>
         <ion-col size-sm="6" offset-sm="3">
           <ion-item>
@@ -25,6 +27,7 @@
         </ion-col>
     </ion-row>
 
+    <!-- Description -->
     <ion-row>
       <ion-col size-sm="6" offset-sm="3">
         <ion-item>
@@ -40,6 +43,7 @@
     </ion-col>
   </ion-row>
 
+  <!-- Price -->
   <ion-row>
     <ion-col size-sm="6" offset-sm="3">
       <ion-item>
@@ -49,6 +53,7 @@
     </ion-col>
 </ion-row>
 
+<!-- Available From -->
 <ion-row>
   <ion-col size-sm="3" offset-sm="3">
     <ion-item>
@@ -57,6 +62,7 @@
     </ion-item>
   </ion-col>
 
+  <!-- Available To -->
   <ion-col size-sm="3">
     <ion-item>
       <ion-label position="floating">Available to</ion-label>
@@ -65,7 +71,7 @@
   </ion-col>
 </ion-row>
 
-
+<!-- button submit -->
 <ion-row>
   <ion-col size-sm="6" offset-sm="3">
     <ion-button color="primary" (click)="onCreateOffer()" [disabled]="!form.valid" expand="block">
