--- a/place-booking/src/app/places/offers/offer-item/offer-item.component.scss
+++ b/place-booking/src/app/places/offers/offer-item/offer-item.component.scss
@@ -1,9 +1,10 @@
 h1 {
     font-size: 18px;
-    border: 1px solid var(--ion-color-primary);
+    //  border: 1px solid var(--ion-color-primary);
     padding: 8px;
     border-radius: 5px;
-    color: 1px solid var(--ion-color-primary);
+    font-weight: 300;
+    // color: 1px solid var(--ion-color-primary);
 }
 
 .offer-details {
