Adding RxJs for state management of Data in Places

--- a/place-booking/src/app/places/discover/place-detail/place-detail.page.html
+++ b/place-booking/src/app/places/discover/place-detail/place-detail.page.html
@@ -12,12 +12,14 @@
     <ion-col size="12" size-sm='8'>
       <ion-img [src]="place.imageUrl"></ion-img>
     </ion-col>
+  </ion-row>
 
-     <ion-col>
-        <ion-content fullscreen>
-          <h3>{{ place.title}}</h3>
-        </ion-content>
-      </ion-col>
+  <ion-row>
+    <ion-col>
+      <ion-content fullscreen>
+        <h3>{{ place.title}}</h3>
+      </ion-content>
+    </ion-col>
   </ion-row>
 </ion-grid>
 
