--- a/place-booking/src/app/places/offers/edit-offer/edit-offer.page.html
+++ b/place-booking/src/app/places/offers/edit-offer/edit-offer.page.html
@@ -6,10 +6,10 @@
       </ion-back-button>
     </ion-buttons>
 
-    <ion-buttons slot="primary">
+    <!-- <ion-buttons slot="primary">
       <ion-button (click)="onUpdateOffer()" [disabled]="!editNewOfferform.valid"></ion-button>
       <ion-icon name="checkmark-circle" slot="icon-only"></ion-icon>
-    </ion-buttons>
+    </ion-buttons> -->
 
   </ion-toolbar>
 </ion-header>
@@ -30,7 +30,7 @@
       <!-- Error Validation row for title -->
   <ion-row *ngIf="!editNewOfferform.get('title').valid && editNewOfferform.get('title').touched">
     <ion-col size-sm="6" offset-sm="3">
-      <span class="errorMsg">Ttitle must be at 3 characters</span>
+      <span class="errorMsg">Title must be at 3 characters</span>
     </ion-col>
   </ion-row>
   
@@ -38,7 +38,7 @@
         <ion-col size-sm="6" offset-sm="3">
           <ion-item>
             <ion-label position="floating">Short Description</ion-label>
-            <ion-textarea rows="3" formControlName="description"></ion-textarea>
+            <ion-textarea rows="4" formControlName="description"></ion-textarea>
           </ion-item>
         </ion-col>
     </ion-row>
@@ -49,6 +49,15 @@
       </ion-col>
     </ion-row>
 
+    <ion-row>
+       <!-- button submit -->
+       <ion-col size-sm="6" offset-sm="3">
+        <ion-button color="primary" (click)="onUpdateOffer()" [disabled]="!editNewOfferform.valid" expand="block">
+            Save Changes
+        </ion-button>
+      </ion-col>
+    </ion-row>
+    
     </ion-grid>
   </form>
 </ion-content>
