--- a/place-booking/src/app/places/discover/discover.page.html
+++ b/place-booking/src/app/places/discover/discover.page.html
@@ -12,24 +12,33 @@
       <ion-segment-button value="all">All Places</ion-segment-button>
       <ion-segment-button value="bookable">Bookable Places</ion-segment-button>
     </ion-segment>
-    <ion-grid>
+
+    <ion-grid *ngIf="!relavantPlaces || relavantPlaces.length <= 0">
+      <ion-row>
+        <ion-col size="12" size-sm='8' offset-sm="2" class="ion-text-center">
+          <p>There are no bookable places at the moment, please try again later!</p>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+
+    <ion-grid *ngIf="relavantPlaces.length > 0">
       <ion-row>
         <ion-col size="12" size-sm='8' offset-sm="2" class="ion-text-center">
           <ion-card>
             <ion-card-header>
-              <ion-card-title>{{ loadedPlaces[0].title}}</ion-card-title>
-              <ion-card-subtitle>{{ loadedPlaces[0].price | currency }} / Night</ion-card-subtitle>
+              <ion-card-title>{{ relavantPlaces[0].title}}</ion-card-title>
+              <ion-card-subtitle>{{ relavantPlaces[0].price | currency }} / Night</ion-card-subtitle>
             </ion-card-header>
-            <ion-img [src]="loadedPlaces[0].imageUrl"></ion-img>
+            <ion-img [src]="relavantPlaces[0].imageUrl"></ion-img>
             <ion-card-content>
-              <p>{{ loadedPlaces[0].description }}</p>
+              <p>{{ relavantPlaces[0].description }}</p>
             </ion-card-content>
   
             <div class="ion-padding">
               <ion-button  
                     color="primary"
                     expand="block"
-                    [routerLink]="['/', 'places', 'tabs', 'discover', loadedPlaces[0].id]">
+                    [routerLink]="['/', 'places', 'tabs', 'discover', relavantPlaces[0].id]">
                 View More
               </ion-button>
             </div>
@@ -40,7 +49,7 @@
       <ion-row>
         <ion-col size="12" size-sm='8' offset-sm="2" class="ion-text-center">
           <ion-list>
-            <ion-item *ngFor="let place of loadedPlaces.slice(1)"
+            <ion-item *ngFor="let place of relavantPlaces.slice(1)"
                 [routerLink]="['/', 'places', 'tabs', 'discover', place.id]"
                 detail>
               <ion-thumbnail slot="start">
