--- a/place-booking/src/app/places/discover/place-detail/place-detail.page.html
+++ b/place-booking/src/app/places/discover/place-detail/place-detail.page.html
@@ -7,7 +7,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-grid>
+<!-- <ion-grid>
   <ion-row>
     <ion-col size="12" size-sm='8'>
       <ion-img [src]="place.imageUrl"></ion-img>
@@ -21,8 +21,37 @@
       </ion-content>
     </ion-col>
   </ion-row>
-</ion-grid>
+</ion-grid> -->
 
-<ion-content class="ion-padding">
-    <ion-button color="primary" class="ion-margin" (click)="onBookPlace()">Book Place</ion-button>
+<ion-content>
+    <ion-grid class="ion-no-padding">
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3" class="ion-no-padding">
+          <ion-img [src]="place.imageUrl"></ion-img>
+        </ion-col>
+      </ion-row>
+
+
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3" class="ion-float-left">
+          <h3>{{ place.title}}</h3>
+        </ion-col>
+
+        <ion-col  class="ion-float-right">
+          <h3>{{ place.price}}</h3>
+        </ion-col>
+    </ion-row>
+
+      <ion-row>
+          <ion-col size-sm="6" offset-sm="3" class="ion-text-center">
+            <p>{{ place.description}}</p>
+          </ion-col>
+      </ion-row>
+       
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3"> 
+          <ion-button color="primary" class="ion-margin" (click)="onBookPlace()" expand="block">Book Place</ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
 </ion-content>
