--- a/place-booking/src/app/places/discover/place-detail/place-detail.page.html
+++ b/place-booking/src/app/places/discover/place-detail/place-detail.page.html
@@ -48,10 +48,12 @@
           </ion-col>
       </ion-row>
        
-      <ion-row *ngIf="isBookable">
+      <ion-row >
         <ion-col size-sm="6" offset-sm="3"> 
           <ion-button color="primary" class="ion-margin" (click)="onBookPlace()" expand="block">Book Place</ion-button>
         </ion-col>
       </ion-row>
     </ion-grid>
 </ion-content>
+
+<!-- *ngIf="isBookable" -->
