Preparing to create new features

--- a/place-booking/src/app/places/discover/place-detail/place-detail.page.html
+++ b/place-booking/src/app/places/discover/place-detail/place-detail.page.html
@@ -57,3 +57,4 @@
 </ion-content>
 
 <!-- *ngIf="isBookable" -->
+<!-- I remved this isBookbale so as to try the other fuctionality without a check -->
