--- a/place-booking/src/app/auth/auth.page.html
+++ b/place-booking/src/app/auth/auth.page.html
@@ -1,38 +1,60 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Authenticate</ion-title>
+    <ion-title>{{ isLogin ? 'Login' : 'Sign-up'}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
-  <form>
-  <ion-grid>
-    <ion-row>
-      <ion-col size-sm="6" offset-sm="3">
-        <ion-list>
-          <ion-item>
-            <ion-label position="floating">Email</ion-label>
-            <ion-input type="email"></ion-input>
-          </ion-item>
+  <form [formGroup]="signInForm" (ngSubmit)="onSubmit()">
+    <ion-grid>
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-list>
+            <ion-item>
+              <ion-label position="floating">Email</ion-label>
+              <ion-input type="email" formControlName="email"></ion-input>
+            </ion-item>
 
-          <ion-item>
-            <ion-label position="floating">Password</ion-label>
-            <ion-input type="password"></ion-input>
-          </ion-item>
-        </ion-list>
-      </ion-col>
-    </ion-row>
+            <!-- Error Validation for email -->
+            <ion-row
+              *ngIf="!signInForm.get('email').valid && signInForm.get('email').touched"
+            >
+              <ion-col size-sm="6" offset-sm="3">
+                <span class="errorMsg">Email is required*</span>
+              </ion-col>
+            </ion-row>
 
-    <ion-row>
-      <ion-col size-sm="6" offset-sm="3">
-        <ion-button color="primary" fill="clear" expand="full">
-          Switch to Login
-        </ion-button>
-        <ion-button color="primary" (click)="onLogin()" expand="block">
-          Login
-        </ion-button>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-</form>
+            <ion-item>
+              <ion-label position="floating">Password</ion-label>
+              <ion-input type="password" formControlName="password"></ion-input>
+            </ion-item>
+          </ion-list>
+        </ion-col>
+
+        <!-- Error Validation for password -->
+        <ion-row
+        *ngIf="!signInForm.get('password').valid && signInForm.get('password').touched">
+        <ion-col size-sm="6" offset-sm="3">
+          <span class="errorMsg">Password is required*</span>
+        </ion-col>
+      </ion-row>
+      </ion-row>
+
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-button 
+                type="button" 
+                color="primary" 
+                fill="clear" 
+                expand="full"
+                (click)='onSwitchMode()'>
+            Switch to {{ isLogin  ? 'SignUp' : 'Login'}}
+          </ion-button>
+          <ion-button type="sunbmit" color="primary" expand="block">
+            Login
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </form>
 </ion-content>
