[Places] Fetch places from Server to UI Problem  * Returned places from server not populated on the UI  * App still uses local JSON data Solution  * Assign fetched places to behaviorSubject in places service  * Removed JSON data, replaced it with data from firebase backend
[Finishes]

--- a/place-booking/src/app/places/offers/offer-item/offer-item.component.html
+++ b/place-booking/src/app/places/offers/offer-item/offer-item.component.html
@@ -9,7 +9,7 @@
       <ion-text color="tertiary" class="space-left">{{ offer?.availableFrom | date}}</ion-text>
       <span class="space-left">to</span>
       <ion-icon name="calendar" color="primary" class="space-left"></ion-icon>
-      <ion-text color="tertiary" class="space-left">{{ offer?.availableTo | date}}</ion-text>
+      <ion-text color="tertiary" class="space-left">{{ offer?.availableTo }}</ion-text>
     </div>
   </ion-label>
 </ion-item>
