--- a/place-booking/src/app/places/offers/offers.page.html
+++ b/place-booking/src/app/places/offers/offers.page.html
@@ -16,10 +16,16 @@
   <ion-grid>
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
-        <ion-spinner *ngIf="isLoading"></ion-spinner>
-        <h4 text-center *ngIf="!isLoading && offers.length <= 0">
-          No Offers Found! Create offers first!
-        </h4>
+        <div class="ion-text-center" *ngIf="isLoading">
+          <ion-spinner color="primary"></ion-spinner>
+        </div>
+        <div class="ion-text-center" *ngIf="!isLoading && offers.length <= 0">
+          <h4>
+            No Offers Found! Create offers first!
+          </h4>
+          <ion-button class="primary" routerLink="/places/tabs/offers/new">Offer New Place</ion-button>
+        </div>
+        
         <ion-list *ngIf="!isLoading && offers.length > 0">
           <ion-item-sliding *ngFor="let offer of offers" #slidingItem>
             <app-offer-item [offer]="offer"></app-offer-item>
