--- a/place-booking/src/app/places/discover/discover.page.html
+++ b/place-booking/src/app/places/discover/discover.page.html
@@ -13,7 +13,15 @@
       <ion-segment-button value="bookable">Bookable Places</ion-segment-button>
     </ion-segment>
 
-    <ion-grid *ngIf="!relavantPlaces || relavantPlaces.length <= 0">
+    <ion-grid *ngIf="isLoading">
+      <ion-row>
+        <ion-col size="12" size-sm='8' offset-sm="2" class="ion-text-center">
+          <ion-spinner color="primary"></ion-spinner>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+
+    <ion-grid *ngIf="!isLoading && (!relavantPlaces || relavantPlaces.length <= 0)">
       <ion-row>
         <ion-col size="12" size-sm='8' offset-sm="2" class="ion-text-center">
           <p>There are no bookable places at the moment, please try again later!</p>
@@ -21,7 +29,7 @@
       </ion-row>
     </ion-grid>
 
-    <ion-grid *ngIf="relavantPlaces.length > 0">
+    <ion-grid *ngIf="!isLoading && relavantPlaces.length > 0">
       <ion-row>
         <ion-col size="12" size-sm='8' offset-sm="2" class="ion-text-center">
           <ion-card>
