--- a/place-booking/src/app/places/discover/place-detail/place-detail.page.html
+++ b/place-booking/src/app/places/discover/place-detail/place-detail.page.html
@@ -27,24 +27,24 @@
     <ion-grid class="ion-no-padding">
       <ion-row>
         <ion-col size-sm="6" offset-sm="3" class="ion-no-padding">
-          <ion-img [src]="place.imageUrl"></ion-img>
+          <ion-img [src]="place?.imageUrl"></ion-img>
         </ion-col>
       </ion-row>
 
 
       <ion-row>
         <ion-col size-sm="6" offset-sm="3" class="ion-float-left">
-          <h3>{{ place.title}}</h3>
+          <h3>{{ place?.title}}</h3>
         </ion-col>
 
         <ion-col  class="ion-float-right">
-          <h3>{{ place.price}}</h3>
+          <h3>{{ place?.price}}</h3>
         </ion-col>
     </ion-row>
 
       <ion-row>
           <ion-col size-sm="6" offset-sm="3" class="ion-text-center">
-            <p>{{ place.description}}</p>
+            <p>{{ place?.description}}</p>
           </ion-col>
       </ion-row>
        
