--- a/place-booking/src/app/places/offers/edit-offer/edit-offer.page.html
+++ b/place-booking/src/app/places/offers/edit-offer/edit-offer.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-title>Edit-offer</ion-title>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref=" '/places/tabs/offers' + place.id ">
+      <ion-back-button defaultHref="'/places/tabs/offers/' + placeId ">
       </ion-back-button>
     </ion-buttons>
 
@@ -15,14 +15,19 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <form [formGroup]="editNewOfferform">
+  <div *ngIf="isLoading">
+    <ion-spinner color="primary">
+    </ion-spinner>
+  </div>
+  <form [formGroup]="editNewOfferform" *ngIf="!isLoading">
     <ion-grid>
 
       <ion-row>
           <ion-col size-sm="6" offset-sm="3">
             <ion-item>
               <ion-label position="floating">Title</ion-label>
-              <ion-input type="text" autocomplete autocorrect
+              <ion-input type="text" autocomplete
+               autocorrect
               formControlName="title"></ion-input>
             </ion-item>
           </ion-col>
@@ -52,7 +57,7 @@
     <ion-row>
        <!-- button submit -->
        <ion-col size-sm="6" offset-sm="3">
-        <ion-button color="primary" (click)="onUpdateOffer()" [disabled]="!editNewOfferform.valid" expand="block">
+        <ion-button color="primary" (click)="onUpdateOffer()" [disabled]="!editNewOfferform?.valid" expand="block">
             Save Changes
         </ion-button>
       </ion-col>
